# Task

./: db.sqlite3  dockerfile  pyproject.toml  req.txt
items/: models.py  serializers.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_items_user.py  0003_remove_items_user_alter_items_id_alter_items_name.py
main/: settings.py  urls.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
